# ShellMate

./: .gitignore  AGENTS.md  Dockerfile  MEMORY.md  README.md  RULES.md  docker-compose.yml  index.html  package-lock.json  package.json
client/: index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.tsx  index.css  main.tsx
client/src/components/: CommandModal.tsx  CommandPanel.tsx  ContextMenu.tsx  Dashboard.tsx  Editor.tsx  FileManager.tsx  GroupModal.tsx  ServerModal.tsx  ServerPanel.tsx  Terminal.tsx
client/src/hooks/: useSftp.ts  useTerminal.ts
client/src/services/: api.ts
docker/: docker-compose.yml
docs/plans/: 2026-02-15-server-commands-panel-design.md  2026-02-15-ssh-terminal-app-design.md  2026-02-15-ssh-terminal-app-implementation.md  2026-02-15-ssh-terminal-web-implementation.md
plans/: 2026-02-15-ssh-terminal-app-design.md
server/: .env.example  package-lock.json
server/src/: index.js
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  lib.rs  main.rs  session.rs  state.rs
src-tauri/src/commands/: export.rs  hostkey.rs  mod.rs  profile.rs  session.rs  vault.rs
src-tauri/src/database/: mod.rs
src-tauri/src/pty/: mod.rs
src-tauri/src/ssh/: mod.rs
src-tauri/src/vault/: crypto.rs  keychain.rs  mod.rs
src/components/: CommandSnippets.tsx  Editor.tsx  FileTree.tsx  Sidebar.tsx  SplitPane.tsx  TabBar.tsx  TerminalPane.tsx
src/hooks/: useFileTree.ts  useTerminal.ts
src/types/: fileTree.ts  tab.ts
ssh-terminal-web/server/: package-lock.json  package.json
(+19 files in other folders)
