[package]
name = "ssh-terminal"
version = "0.1.0"
edition = "2021"

[lib]
name = "ssh_terminal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
keyring = "3"
chacha20poly1305 = "0.10"
rand = "0.8"
base64 = "0.22"
thiserror = "1"
log = "0.4"
env_logger = "0.11"
dirs = "5"
ssh2 = "0.9"
portable-pty = "0.8"
chrono = "0.4"
